@@ -1,6 +1,11 @@
 2017-07-05  Georg-Johann Lay  <avr@gjlay.de>
 
 	PR target/81305
+	* testsuite/gcc.target/avr/isr-test.h: New file.
+
+2017-07-05  Georg-Johann Lay  <avr@gjlay.de>
+
+	PR target/81305
 	* config/avr/avr.c (avr_out_movhi_mr_r_xmega) [CONSTANT_ADDRESS_P]:
 	Don't depend on "optimize > 0".
 	(out_movhi_r_mr, out_movqi_mr_r): Same.
